// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-control-group css-mdhwnc"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="css-9vnecn"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-15x300y"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-flex css-ylu66o"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="css-1om21wv"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Let It
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="css-13t5k0m"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-q9pjjm"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-flex css-ylu66o"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="css-1om21wv"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Go
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render mixed control types 1`] = `
<div
  class="wp-components-flex wp-components-control-group css-mdhwnc"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="css-9vnecn"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="wp-components-flex wp-components-base-field wp-components-select css-dxlabk"
      data-g2-c16t="true"
      data-g2-component="SelectWrapper"
    >
      <select
        class="css-1vhtx5r"
        data-g2-c16t="true"
        data-g2-component="Select"
        id="salutations"
      />
      <div
        class="css-2av5m8"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <span
          class="wp-components-truncate wp-components-text css-ckswz2"
          data-g2-c16t="true"
          data-g2-component="Text"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-13t5k0m"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="wp-components-flex wp-components-base-field wp-components-text-input css-1gmusm8"
      data-g2-c16t="true"
      data-g2-component="TextInputWrapper"
    >
      <input
        class="css-7h3rix"
        data-g2-c16t="true"
        data-g2-component="TextInput"
        id="fname"
        value=""
      />
    </div>
  </div>
  <div
    class="css-13t5k0m"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-q9pjjm"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-flex css-ylu66o"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="css-1om21wv"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Let It
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
